--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-slint = "1.7.1"
+slint = {git = "https://github.com/slint-ui/slint.git",   rev = "13692e2647ca987600ee31b164c12b893491b5cd", features = ["default"], version = "1.8.0"}
 
 [build-dependencies]
-slint-build = "1.7.1"
+slint-build = {git = "https://github.com/slint-ui/slint.git",   rev = "13692e2647ca987600ee31b164c12b893491b5cd", features = ["default"]}
